# ai-paywall

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  mypy.ini  pyproject.toml
.github/ISSUE_TEMPLATE/: bot_pattern.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  test.yml
ai_paywall/: __init__.py  core.py  patterns.py
ai_paywall/adapters/: __init__.py  request.py
tests/: __init__.py  test_adapters.py  test_core.py  test_init.py  test_integration.py  test_patterns.py
